--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
+  sqflite_common_ffi: ^2.3.0
+  sqflite_common_ffi_web: ^0.4.5+4
   path: ^1.9.0
   sqflite: ^2.4.1
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
