--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   sqflite_common_ffi: ^2.3.0
-  sqflite_common_ffi_web: ^0.4.5+4
-  path: ^1.9.0
-  sqflite: ^2.4.1
+  sqflite_common_ffi_web: ^0.4.0
+  path: ^1.8.3
+  sqflite: ^2.3.0
   logger: ^2.5.0
   provider: ^6.1.2
 
