--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   sqflite: ^2.3.0
   logger: ^2.5.0
   provider: ^6.1.2
+  http: ^1.1.0
+  encrypt: ^5.0.1
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
